# Wall-follow-robot-service

./: .bash_history
.dbus/session-bus/: adfd0ac7f4b141e2a4d8d4728b1cd147-1  adfd0ac7f4b141e2a4d8d4728b1cd147-2
.rviz/: persistent_settings
.theia/workspace-storage/08ed11b38cc5124bb68ca7d49c91b9e4/: workspace-state.json
Wall-follow-robot/catkin_ws/devel/include/your_package_name/: FindWall.h  FindWallRequest.h  FindWallResponse.h
Wall-follow-robot/catkin_ws/devel/lib/pkgconfig/: wall_follower.pc  wall_follower_pkg.pc  your_package_name.pc
Wall-follow-robot/catkin_ws/devel/lib/wall_follower_pkg/: wall_follower.py
Wall-follow-robot/catkin_ws/src/wall_follower_pkg/: CMakeLists.txt
Wall-follow-robot/catkin_ws/src/wall_follower_pkg/scripts/: wall_follower.py
Wall-follow-robot/notebook_ws/: default.ipynb
catkin_ws/devel/include/wall_follower_pkg/: FindWall.h  FindWallRequest.h  FindWallResponse.h  OdomRecordAction.h  OdomRecordActionFeedback.h  OdomRecordActionGoal.h  OdomRecordActionResult.h  OdomRecordFeedback.h  OdomRecordGoal.h  OdomRecordResult.h
catkin_ws/devel/lib/pkgconfig/: scan_test.pc  wall_follower_pkg.pc
catkin_ws/devel/share/scan_test/cmake/: scan_testConfig.cmake
catkin_ws/src/wall_follower_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/wall_follower_pkg/action/: OdomRecord.action
catkin_ws/src/wall_follower_pkg/launch/: main.launch
catkin_ws/src/wall_follower_pkg/scripts/: .find_wall_server.py.swp  record_odom_server.py  wall_follower.py
notebook_ws/.ipynb_checkpoints/: default-checkpoint.ipynb
(+74 files in other folders)
